kubernetes-manifests/sandbox/homer/homer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
  labels:
    app: homer
spec:
  selector:
    matchLabels:
      app: homer
  template:
    metadata:
      labels:
        app: homer
    spec:
      containers:
        - name: homer
          image: b4bz/homer:v26.4.2
          ports:
          - containerPort: 8080
          volumeMounts:
          - name: homer-config-volume
            mountPath: /www/assets/config.yml
            subPath: config.yml
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
      volumes:
      - name: homer-config-volume
        configMap:
          name: homer-config
