kubernetes-manifests/sandbox/homer/homer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer
spec:
  selector:
    app: homer
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
