kubernetes-manifests/sandbox/homer/homer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer
  annotations:
    external-dns.alpha.kubernetes.io/target: private-ingress.dtlp.cc
spec:
  rules:
    - host: homer.dtlp.cc
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homer
spec:
  entryPoints:
    - web-secure
  routes:
    - kind: Rule
      match: Host(`homer.dtlp.cc`)
      services:
        - name: homer
          kind: Service
          port: 8080
  tls: {}
